// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cart /> snapshots should match snapshot when cart is empty 1`] = `
<section
  aria-label="carrinho de compras"
>
  <button
    aria-expanded="false"
    class="styles__Cart-sc-33q7z1-0 cfnkFh"
  >
    <icon-mock
      data-testid="cart-svg"
    />
  </button>
</section>
`;

exports[`<Cart /> snapshots should match snapshot when cart modal open 1`] = `
<section
  aria-label="carrinho de compras"
>
  <button
    aria-expanded="true"
    class="styles__Cart-sc-33q7z1-0 cfnkFh"
  >
    <icon-mock
      data-testid="cart-svg"
    />
    <span
      class="styles__CartDetail-sc-33q7z1-1 gvvFRN"
      data-testid="cart-detail"
    >
      1
    </span>
  </button>
  <section
    aria-label="modal carrinho de compras"
    class="styles__Modal-sc-1muh66y-0 joXRfi"
  >
    <div
      class="styles__Title-sc-1muh66y-1 mEFUd"
    >
      <h2>
        Cart
      </h2>
    </div>
    <div
      class="styles__Content-sc-1muh66y-2 bUNORX"
    >
      <ul
        class="styles__Items-sc-1muh66y-3 jSlPFn"
      />
      <button
        aria-label="finalizar compra"
        class="styles__StyledButton-sc-1csa66j-0 hmYbLP"
      >
        Checkout
      </button>
    </div>
  </section>
</section>
`;

exports[`<Cart /> snapshots should match snapshot when cart not is empty 1`] = `
<section
  aria-label="carrinho de compras"
>
  <button
    aria-expanded="false"
    class="styles__Cart-sc-33q7z1-0 cfnkFh"
  >
    <icon-mock
      data-testid="cart-svg"
    />
    <span
      class="styles__CartDetail-sc-33q7z1-1 gvvFRN"
      data-testid="cart-detail"
    >
      1
    </span>
  </button>
</section>
`;
